# deep-todo-app

./: .coverage  My Todo Manager API.postman_collection.json  README.md  database.db  main.py  pyproject.toml  testing.db
config/: db_config.py
tests/: conftest.py  test_tasks.py  test_unit.py
todo/controller/: task_manager_controller.py
todo/dtos/: create_task_dto.py  patch_task_dto.py  update_task_dto.py
todo/handlers/: db_query.py  response.py  task_handler.py
todo/model/: task.py
